--- a/src/main/resource/application.properties
+++ b/src/main/resource/application.properties
@@ -16,16 +16,49 @@ spring.datasource.password = 123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 spring.datasource.filters = stat
-spring.datasource.initialSize = 5
-spring.datasource.minIdle = 10
-spring.datasource.maxActive = 20
+spring.datasource.initialSize = 100
+spring.datasource.minIdle = 500
+spring.datasource.maxActive = 1000
 spring.datasource.timeBetweenEvictionRunsMillis = 2000
 
 #redis
 redis.host = 192.168.152.136
 redis.port = 6379
-redis.timeout =3
+redis.timeout =10
 redis.password=123456
-redis.poolMaxTotal = 10
-redis.poolMaxIdle = 10
-redis.poolMaxWait =3
+redis.poolMaxTotal = 1000
+redis.poolMaxIdle = 500
+redis.poolMaxWait =500
+
+#rabbitmq
+
+spring.rabbitmq.host=192.168.152.136
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+#\u6D88\u8D39\u8005\u6570\u91CF
+spring.rabbitmq.listener.simple.concurrency= 10
+spring.rabbitmq.listener.simple.max-concurrency= 10
+#\u6D88\u8D39\u8005\u6BCF\u6B21\u4ECE\u961F\u5217\u83B7\u53D6\u7684\u6D88\u606F\u6570\u91CF
+spring.rabbitmq.listener.simple.prefetch= 1
+#\u6D88\u8D39\u8005\u81EA\u52A8\u542F\u52A8
+spring.rabbitmq.listener.simple.auto-startup=true
+#\u6D88\u8D39\u5931\u8D25\uFF0C\u81EA\u52A8\u91CD\u65B0\u5165\u961F
+spring.rabbitmq.listener.simple.default-requeue-rejected= true
+spring.rabbitmq.template.retry.enabled=true 
+spring.rabbitmq.template.retry.initial-interval=1000 
+spring.rabbitmq.template.retry.max-attempts=3
+spring.rabbitmq.template.retry.max-interval=10000
+spring.rabbitmq.template.retry.multiplier=1.0
+
+
+
+#static
+spring.resources.add-mappings=true
+spring.resources.cache-period= 3600
+spring.resources.chain.cache=true 
+spring.resources.chain.enabled=true
+spring.resources.chain.gzipped=true
+spring.resources.chain.html-application-cache=true
+spring.resources.static-locations=classpath:/static/
